--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 <IfModule mod_rewrite.c>
 
     RewriteEngine On
- 	RewriteBase /
+ 	RewriteBase /anthillpro
    
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
