--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "golojan/dati",
+    "name": "golojan/anthillpro",
     "description": "Dexterous Training Institute",
     "type": "project",
     "version": "2.0.0",
